feat: get symptoms
